# pyzendesk

./: .gitignore  .travis.yml  README.md  requirements_ci.txt  requirements_dev.txt  requirements_travis.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/actions/python-build/: action.yml
.github/workflows/: python-3.10.yml  python-3.11.yml  python-3.12.yml  python-3.13.yml  python-3.9.yml
pyzendesk/: __init__.py  admins.py  agents.py  api.py  attachments.py  constants.py  tickets.py  users.py
pyzendesk/samples/: __init__.py  admins.py  agents.py  me.py  tickets.py  users.py
samples/: me.py  tickets.py  users.py
