[metadata]
name = PyZendesk
version = attr: pyzendesk.constants.APP_VERSION
description = API for Zendesk
long_description = file: README.md
long_description_content_type = text/markdown
author = Fabio Castelli
author_email = muflone@muflone.com
url = http://www.muflone.com/pyzendesk/
license = GPLv3+
license_files = LICENSE
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = pyzendesk
include_package_data = False
install_requires =
    requests==2.28.0

[options.package_data]
pyzendesk = samples/*.py
